After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 744695 - info: Fix crash when application supports no mime-type
info: Fix crash when application supports no mime-type
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Other Preferences
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-18 09:20 UTC by Bastien Nocera
Modified: 2015-02-19 14:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
info: Fix crash when application supports no mime-type (1018 bytes, patch)
2015-02-18 09:21 UTC, Bastien Nocera
accepted-commit_now Details | Review
info: Fix crash when application supports no mime-type (1.10 KB, patch)
2015-02-19 14:23 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-02-18 09:20:54 UTC
.
Comment 1 Bastien Nocera 2015-02-18 09:21:17 UTC
Created attachment 297079 [details] [review]
info: Fix crash when application supports no mime-type

XXX Note sure how it happens yet
See https://bugzilla.redhat.com/show_bug.cgi?id=1193680
Comment 2 Rui Matos 2015-02-18 16:30:46 UTC
Review of attachment 297079 [details] [review]:

I think this should be pushed anyway since the docs say NULL is a valid return value here
Comment 3 Bastien Nocera 2015-02-19 14:23:47 UTC
Created attachment 297276 [details] [review]
info: Fix crash when application supports no mime-type

It seems to be possible for Firefox Nightly to set itself up as the
default x-scheme-handler/http without actually handling any mime-types.

See https://bugzilla.redhat.com/show_bug.cgi?id=1193680
Comment 4 Bastien Nocera 2015-02-19 14:24:42 UTC
Attachment 297276 [details] pushed as d9f08df - info: Fix crash when application supports no mime-type